# linalg

./: .clang-format  .clang-tidy  CMakeLists.txt  Makefile  allocator.h  build.ninja  linalg.h  matrix.c  matrix.h  matrix3.c  matrix3.h  quaternion3.c  quaternion3.h  rotation3.h  transform3.c  transform3.h  transformation3.h  translation3.c  translation3.h  vector.c  vector.h  vector3.c  vector3.h
app/: main.cpp
lib/: adrc.hpp  binary.hpp  dijkstra.hpp  ekf.hpp  filters.hpp  heap_kalman.hpp  heap_matrix.hpp  heap_vector.hpp  kalman.hpp  lqr.hpp  lqr_finite.hpp  lqr_infinite.hpp  observer.hpp  pid.hpp  polynomial.hpp  quaternion3d.hpp  regulator.hpp  rotation3d.hpp  sdre.hpp  signals.hpp  stack_kalman.hpp  stack_matrix.hpp  stack_vector.hpp  ternary.hpp  timer.hpp  transforms.hpp  utility.hpp  vector3d.hpp
test/: dft_test.cpp  filter_test.cpp  filters.cpp  kalman_test.cpp  pid_test.cpp  polynomial.cpp  polynomial_test.cpp  signals.cpp
