add_library(linalg STATIC)

target_sources(linalg PRIVATE 
    matrix.c
    vector.c
    quaternion3.c
    matrix3.c
    vector3.c
    transform3.c
    allocator.c
)

target_include_directories(linalg PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)

target_compile_options(linalg PUBLIC
    -std=c23
    -Wall
    -Wextra
    -Wconversion
    -Wshadow
    -Wpedantic
    -Wnarrowing
    -Waddress
    -pedantic
    -Wdeprecated
    -Wsign-conversion
    -Wduplicated-cond
    -Wduplicated-branches
    -Wlogical-op
    -Wnull-dereference
    -Wdouble-promotion
    -Wimplicit-fallthrough
    -Wcast-align
    -Wformat=2
    -Wformat-security
    -Wmissing-prototypes
    -Wmissing-declarations
    -Wstrict-prototypes
    -Wold-style-definition
    -Wundef
    -Wvla
    -Wpointer-arith
    -Wstrict-aliasing=2
)
